--- a/about.html
+++ b/about.html
@@ -1,55 +1,57 @@
 <!DOCTYPE html>
 <html lang="ja">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>About Me</title>
-    <!-- BootstrapのCSS読み込み -->
-    <link rel="stylesheet" href="//<maxcd></maxcd>n.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-    <!-- jQuery読み込み -->
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <!-- BootstrapのJS読み込み -->
-    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="./css/custom.css">
-  </head>
-  
-  <body>
-      <header> 
-      <nav class="navbar navbar-default">
-      　<ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html" class="selected">AboutMe</a></li>
-        </ul>
-      </nav>
-      </header>
 
-    <div class="container">
-       <div id="logo">
-       <div class="page-header frame">
-        <h1>WELCOME!</h1>
-      </div>
-       
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>About Me</title>
+  <!-- BootstrapのCSS読み込み -->
+  <link rel="stylesheet" href="//<maxcd></maxcd>n.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+  <!-- jQuery読み込み -->
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+  <!-- BootstrapのJS読み込み -->
+  <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="./css/custom.css">
+</head>
+
+<body>
+  <header>
+    <nav class="navbar navbar-default">
+    
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html" class="selected">AboutMe</a></li>
+      </ul>
+    </nav>
+  </header>
+
+
+  <div class="container">
+    <div class="page-header frame">
+      <h1>WELCOME!</h1>
+    </div>
+
+    <div id="logo">
       <div class="row">
-       <div class="col-sm-5">   
-         <img src="profile.jpg" alt="myPhoto" class="frame">
-       </div>
-      <div class="col-sm-7">   
-        <h2>Profile</h2>
-        <p><strong>名前：</strong>Oonuki N.</p>
-        <p>出身地： 日本</p>
-        <p>現在、<a href="https://techacademy.jp/"> TechAcademy </a>のWebアプリケーションコースを受講中です。</p>
-        <p>なかなか習得できずにいる RubyやRuby on Rails を使えるようにするのが目標です。</p>
-        <p>私のポートフォリオを見て気になった方は、<a href="contact.html">Contact</a>よりご連絡お願い致します。</p>
-      </div>
-     </div>
- 
-      </div>
-    </div>
-     <footer>
-        <p>&copy; 2017 Oonuki N.</p>
-      </footer>
-    </div>
-  </body>
-</html>
 
+        <div class="col-sm-5">
+          <img src="profile.jpg" alt="myPhoto" class="frame">
+        </div>
+        <div class="col-sm-7">
+          <h2>Profile</h2>
+          <p><strong>名前：</strong>Oonuki N.</p>
+          <p>出身地： 日本</p>
+          <p>現在、<a href="https://techacademy.jp/"> TechAcademy (外部リンク)</a>のWebアプリケーションコースを受講中です。</p>
+          <p>なかなか習得できずにいる RubyやRuby on Rails を使えるようにするのが目標です。</p>
+          <p>先日、初めて<a href="https://github.com/saray555">GitHubページ (外部リンク)</a>を作成しました。まだまだ内容は薄いですが、ご興味が沸いた方はどうぞお立ちよりください。</p>
+        </div>
+      </div>
+    </div>
+    <footer>
+      <p>&copy; 2017 Oonuki N.</p>
+    </footer>
+  </div>
+</body>
+
+</html>
