--- a/about.html
+++ b/about.html
@@ -27,27 +27,59 @@
   </header>
 
 
-  <div class="container">
-    <div class="page-header frame">
+  <div class="container-fluid">
+    <div class="title frame">
       <h1>WELCOME!</h1>
     </div>
 
-    <div id="logo">
-      <div class="row">
+    <div class="row">
+      <div class="col-sm-12 col-md-12">
+        <div class="col-sm-4 col-md-3">
 
-        <div class="col-sm-5">
-          <img src="profile.jpg" alt="myPhoto" class="frame">
+          <div id="logo">
+            <img src="profile.jpg" alt="myPhoto" class="frame">
+          </div>
         </div>
-        <div class="col-sm-7">
+
+        <div class="col-sm-8 col-md-9">
           <h2>Profile</h2>
           <p><strong>名前：</strong>Oonuki N.</p>
           <p>出身地： 日本</p>
           <p>現在、<a href="https://techacademy.jp/"> TechAcademy (外部リンク)</a>のWebアプリケーションコースを受講中です。</p>
           <p>なかなか習得できずにいる RubyやRuby on Rails を使えるようにするのが目標です。</p>
-          <p>先日、初めて<a href="https://github.com/saray555">GitHubページ (外部リンク)</a>を作成しました。まだまだ内容は薄いですが、ご興味が沸いた方はどうぞお立ちよりください。</p>
+          <p>先日、初めて<a href="https://github.com/saray555" alt="myrepository link">GitHubページ (外部リンク)</a>を使用しました。<br>少しずつアプリケーションを作成していく予定ですので、ご興味が沸いた方はどうぞお立ちよりください。</p>
+
+          <table border="1">
+            <thead>
+              <tr>
+                <th>#</th>
+                <th>作品名</th>
+            </thead>
+            <tbody>
+              <th>1</th>
+              <td>課題 1 </td>
+              </tr>
+            </tbody>
+          </table>
+
         </div>
       </div>
     </div>
+
+    <!-- SAMPLE  
+    <div class="row">
+  <div class="col-sm-9">Level 1:.col-sm-9
+    <div class="row">
+      <div class="col-xs-8">Level 2: .col-xs-8</div>
+      <div class="col-xs-4">Level 2: .col-xs-4</div>
+    </div>
+  </div>
+  <div class="col-sm-3">Level 1:.col-sm-3</div>
+</div>
+-->
+
+    <hr>
+
     <footer>
       <p>&copy; 2017 Oonuki N.</p>
     </footer>
